Fix Java 8 build errors in wpinet
* No Cleaners in Java 8, so switched the two uses back to finalizers.